[package]
name = "mta-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
gtfs-realtime = "0.2.0"
prost = "0.14.3"
reqwest = { version = "0.13.2", features = ["blocking"] }
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }  # For CLI argument parsing
prettytable-rs = "0.10"  # For nice tables