[package]
name = "mta-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
gtfs-realtime = "0.2.0"
prost = "0.14.3"
reqwest = { version = "0.13.2", features = ["blocking"] }
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
prettytable-rs = "0.10"
csv = "1.3"           # For reading stops.csv
serde = { version = "1.0", features = ["derive"] }  # For deserializing CSV
fuzzy-matcher = "0.3" # For fuzzy station name matching
dialoguer = "0.12.0"    # For interactive prompts
indicatif = "0.18.4"    # For progress bars